# dynamic-des

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  versions.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pipeline.yml  publish.yml
0.1.0/: 404.html  index.html
0.1.0/api/: index.html
0.1.0/concepts/: index.html
0.1.0/getting-started/: index.html
0.1.0/search/: search_index.json
0.1.1/: index.html  objects.inv
0.1.1/api/: index.html
0.1.1/getting-started/: index.html
0.1.1/search/: search_index.json
0.10.0/api/: index.html
0.10.0/architecture/context/: index.html
0.10.0/architecture/environment/: index.html
0.10.0/architecture/paradigms/: index.html
0.10.0/getting-started/: index.html
0.11.0/: 404.html  objects.inv
0.11.0/api/: index.html
0.11.0/getting-started/: index.html
0.11.0/search/: search_index.json
0.11.1/: index.html
0.11.1/api/: index.html
0.11.1/search/: search_index.json
0.2.0/search/: search_index.json
0.3.0/api/: index.html
0.3.0/search/: search_index.json
0.4.0/api/: index.html
0.4.0/concepts/: index.html
0.4.0/getting-started/: index.html
0.5.0/api/: index.html
0.5.0/search/: search_index.json
0.6.0/api/: index.html
0.6.0/search/: search_index.json
0.7.0/: 404.html  index.html  objects.inv
0.7.0/api/: index.html
0.7.0/concepts/: index.html
0.7.0/getting-started/: index.html
0.7.0/search/: search_index.json
0.8.0/: 404.html  index.html  objects.inv
0.8.0/api/: index.html
0.8.0/getting-started/: index.html
0.8.0/search/: search_index.json
0.8.1/search/: search_index.json
0.9.0/: 404.html  index.html  objects.inv
0.9.0/api/: index.html
0.9.0/concepts/: index.html
0.9.0/getting-started/: index.html
0.9.0/search/: search_index.json
api/: index.html
concepts/: index.html
docs/: api.md  concepts.md  getting-started.md  index.md  mkdocs.yml
docs/architecture/: connectors.md  context.md  environment.md  paradigms.md  resources.md
docs/assets/: dynamic-des.drawio
docs/examples/: history.md  kafka.md  local.md
docs/guides/: avro-and-pydantic.md  complex-routing.md  data-lake-ingestion.md  dynamic-topology.md  kafka-security.md  multi-resource-handoffs.md  preemptive-breakdowns.md
docs/tutorials/: 01-first-factory.md  02-distributions-resources.md  03-connecting-kafka.md
getting-started/: index.html
search/: search_index.json
src/dynamic_des/: __init__.py  utils.py
tests/: conftest.py  test_context.py  test_egress_kafka.py  test_egress_storage.py  test_environment.py  test_ingress_kafka.py  test_local_connectors.py  test_params.py  test_registry.py  test_resource.py  test_sampler.py  test_schemas.py  test_store.py
tests/integration/: conftest.py  test_kafka.py  test_local.py  test_parquet.py  test_postgres.py  test_redis.py
tests/unit/: test_admin_kafka.py  test_container.py  test_egress_kafka.py  test_egress_postgres.py  test_egress_redis.py  test_egress_storage.py  test_environment.py  test_ingress_postgres.py  test_ingress_redis.py  test_postgres_connectors.py  test_registry.py  test_resource.py  test_sampler.py
(+115 files in other folders)
