[project]
name = "dynamic-des"
version = "0.1.0"
description = "Real-time SimPy control plane to dynamically update parameters and stream outputs via external systems like Kafka, Redis, or Postgres. Built for event-driven digital twins."
readme = "README.md"
authors = [
    { name = "Jaehyeon Kim", email = "dottami@gmail.com" }
]
keywords = [
    "simpy", 
    "simulation", 
    "digital-twin", 
    "discrete-event-simulation", 
    "kafka",
    "redis",
    "postgres",
    "real-time", 
    "industry-4-0"
]
requires-python = ">=3.10"
dependencies = [
    "simpy>=4.0.0",
    "numpy>=1.26.0",
    "orjson>=3.10.0",
    "python-on-whales>=0.70.0"
]
[project.optional-dependencies]
kafka =[
    "aiokafka[lz4]>=0.11.0",
    "kafka-python>=2.0.2"
]
redis = ["redis>=5.0.0"]
postgres =["asyncpg>=0.29.0"]
dashboard = ["nicegui>=1.4.0"]
all = [
    "dynamic-des[kafka,redis,postgres,dashboard]"
]
[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs<2.0",
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]
[project.scripts]
# Infrastructure
ddes-kafka-infra-up = "dynamic_des.examples:kafka_infra_up"
ddes-kafka-infra-down = "dynamic_des.examples:kafka_infra_down"
# Examples & Dashboard
ddes-local-example = "dynamic_des.examples:local_demo"
ddes-kafka-example = "dynamic_des.examples:kafka_demo"
ddes-kafka-dashboard = "dynamic_des.examples:kafka_dashboard_demo"